Minor update to note in example environment variables

--- a/app/.env.sample
+++ b/app/.env.sample
@@ -8,9 +8,9 @@ NEO4J_PASSWORD=letmein
 
 # Neo4j Aura [PRODUCTION]
 # NOTE: We are specifying encryption in our driver, so if we have a
-#       Neo4 Aura URI of neo4j+s://<YOUR-NEO4J-AURA>.databases.neo4j.io we
-#       need to change it to neo4j://<YOUR-NEO4J-AURA>.databases.neo4j.io
-# NEO4J_URI=neo4j://<YOUR-NEO4J-AURA>.databases.neo4j.io
+#       Neo4 Aura URI of neo4j+s://<YOUR-NEO4J-AURA>.databases.neo4j.io
+#       we need to change it to neo4j://<YOUR-NEO4J-AURA>.databases.neo4j.io
+# NEO4J_URI=neo4j://72e8b9d1.databases.neo4j.io
 # NEO4J_USER=neo4j
-# NEO4J_PASSWORD=
+# NEO4J_PASSWORD=X4PzXKFfmL-KSjgp57sk55CVoe6-mYTr-vfLh7IiyQk
 # NEO4J_ENCRYPTED=true
