Add guide demonstrating how our example GraphQL query searches podcasts in iTunes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,18 @@
     "Vercel",
     "autogenerate",
     "clsx",
+    "datetime",
     "dstack",
     "gran",
+    "graphistania",
     "jwks",
     "lcov",
     "letmein",
     "plyr",
-    "therobbrennan"
+    "podcasts",
+    "searchi",
+    "therobbrennan",
+    "tunes",
+    "urlencode"
   ]
 }
