--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "@neo4j/graphql": "^1.0.0-alpha.3",
     "@next/bundle-analyzer": "^9.5.2",
     "apollo-server-micro": "^2.16.1",
+    "autoprefixer": "^10.2.4",
     "clsx": "^1.1.1",
     "cross-fetch": "^3.0.5",
     "graphql-tag": "^2.11.0",
@@ -47,10 +48,12 @@
     "next-compose-plugins": "^2.2.0",
     "next-images": "^1.4.1",
     "plyr": "^3.6.3",
+    "postcss": "^8.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-player": "^2.8.1",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.3",
