Update workspace dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "datetime",
     "dstack",
     "gran",
+    "grandstack",
     "graphistania",
     "jwks",
     "lcov",
@@ -15,6 +16,7 @@
     "plyr",
     "podcasts",
     "searchi",
+    "semibold",
     "therobbrennan",
     "tunes",
     "urlencode"
