--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "^10.2.4",
     "bcrypt": "^5.0.0",
     "cross-fetch": "^3.0.5",
+    "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "graphql-tools": "^6.0.18",
     "jsonwebtoken": "^8.5.1",
